Added header pic

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<!-- Home section -->
 		<div class="owl-carousel owl-nav-overlay owl-dots-overlay" data-owl-nav="true" data-owl-dots="true" data-owl-items="1">
 			<!-- Slider box 1 -->
-			<div class="bg-image" style="background-image: url(./assets/images/business-clean-2-slider-2.jpg)">
+			<div class="bg-image" style="background-image: url(./images/serene1.jpg)">
 				<div class="section-xl bg-black-03">
 					<div class="container text-center">
 						<div class="row">
