--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>L&L Perfect Balance</title>
+		<title>L&L Perfect Balance Inc.</title>
 		<!-- Favicon -->
         <link href="./assets/images/favicon.png" rel="shortcut icon">
 		<!-- CSS -->
