--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<nav class="navbar navbar-dark">
 				<div class="container">
 					<a class="navbar-brand" style="margin-left: -7.5%;">
-						<h5>L&L Perfect Balance</h5>
+						<h5>L&L Perfect Balance Inc.</h5>
 					</a>
 				</div>
 			</nav>
@@ -44,13 +44,13 @@
 		<!-- Home section -->
 		<div class="owl-carousel owl-nav-overlay owl-dots-overlay" data-owl-nav="true" data-owl-dots="true" data-owl-items="1">
 			<!-- Slider box 1 -->
-			<div class="bg-image" style="background-image: url(./images/serene1.jpg)">
+			<div class="bg-image" style="background-image: url(./images/leo.jpg)">
 				<div class="section-xl bg-black-03">
 					<div class="container text-center">
 						<div class="row">
 							<div class="col-12 col-sm-10 offset-sm-1">
-								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello there! This Template is</h5>
-								<h1 class="font-weight-bold uppercase letter-spacing-1px">Made for your Business</h1>
+								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello!</h5>
+								<h1 class="font-weight-bold uppercase letter-spacing-1px">Welcome to our website.</h1>
 								<!-- <a class="button button-xl button-radius button-outline-white margin-top-20 button-font-2" href="#">Explore</a> -->
 							</div>
 						</div><!-- end row -->
@@ -58,13 +58,13 @@
 				</div>
 			</div>
 			<!-- Slider box 2 -->	
-			<div class="bg-image" style="background-image: url(./assets/images/business-clean-2-slider-1.jpg)">
+			<div class="bg-image" style="background-image: url(./images/leo2.jpg)">
 				<div class="section-xl bg-black-03">
 					<div class="container text-center">
 						<div class="row">
 							<div class="col-12 col-sm-10 offset-sm-1">
-								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello there! This Template is</h5>
-								<h1 class="font-weight-bold uppercase letter-spacing-1px">Made for your Business</h1>
+								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello!</h5>
+								<h1 class="font-weight-bold uppercase letter-spacing-1px">Welcome to our website. </h1>
 								<!-- <a class="button button-xl button-radius button-outline-white margin-top-20 button-font-2" href="#">Explore</a> -->
 							</div>
 						</div><!-- end row -->
@@ -72,13 +72,13 @@
 				</div>
 			</div>
 			<!-- Slider box 3 -->
-			<div class="bg-image" style="background-image: url(./assets/images/business-clean-2-slider-1.jpg)">
+			<div class="bg-image" style="background-image: url(./images/leo3.jpg)">
 				<div class="section-xl bg-black-03">
 					<div class="container text-center">
 						<div class="row">
 							<div class="col-12 col-sm-10 offset-sm-1">
-								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello there! This Template is</h5>
-								<h1 class="font-weight-bold uppercase letter-spacing-1px">Made for your Business</h1>
+								<h5 class="uppercase font-weight-light letter-spacing-1px margin-bottom-20 text-white">Hello!</h5>
+								<h1 class="font-weight-bold uppercase letter-spacing-1px">Welcome to our website.</h1>
 								<!-- <a class="button button-xl button-radius button-outline-white margin-top-20 button-font-2" href="#">Explore</a> -->
 							</div>
 						</div><!-- end row -->
@@ -93,18 +93,18 @@
 			<div class="container">
 				<div class="row icon-5xl text-center">
 					<div class="col-12 col-md-4">
-						<i class="ti-star text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Social Marketing</h5>
+						<i class="fas fa-calculator"></i>
+						<h5 class="font-weight-normal margin-top-20">Personal & Sales Tax </h5>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 					</div>
 					<div class="col-12 col-md-4">
-						<i class="ti-blackboard text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Strategy Planning</h5>
+						<i class="fas fa-book-open"></i>
+						<h5 class="font-weight-normal margin-top-20">Bookkeeping</h5>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 					</div>
 					<div class="col-12 col-md-4">
-						<i class="ti-comment-alt text-dark"></i>
-						<h5 class="font-weight-normal margin-top-20">Consulting</h5>
+						<i class="fas fa-dollar-sign"></i>
+						<h5 class="font-weight-normal margin-top-20">Payroll</h5>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 					</div>
 				</div><!-- end row -->
@@ -117,11 +117,11 @@
 			<div class="container">
 				<div class="row align-items-center col-spacing-50">
 					<div class="col-12 col-lg-6">
-						<img class="box-shadow" src="./assets/images/business-clean-2-about.jpg" alt="">
+						<img class="box-shadow" src="./images/luis1.jpg" alt="">
 					</div>
 					<div class="col-12 col-lg-6">
-						<h3 class="font-weight-light margin-bottom-20">We believe that teamwork divides the tasks and multiplies the success</h3>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						<h3 class="font-weight-light margin-bottom-20">Luis E. Perez</h3>
+						<p>Enrolled agent to practice before the I.R.S.</p>
 						<!-- <span class="button button-lg button-radius button-reveal-right-dark margin-top-30" href="#"><i class="ti-arrow-right"></i><span>Learn More</span></a> -->
 					</div>
 				</div>
@@ -204,8 +204,8 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-12 col-lg-8 col-xl-7">
-							<h1 class="font-weight-light">Feel free to ask any questions</h1>
-							<p class="font-large">Etiam sit amet orci eget eros faucibus tincidunt.</p>
+							<h1 class="font-weight-light">Contact us!</h1>
+							<p class="font-large"></p>
 						</div>
 						<div class="col-12 col-lg-4 col-xl-5 text-lg-right">
 							<a class="button button-xl button-radius button-reveal-right-outline-white" href="#"><i class="ti-arrow-right"></i><span>Get In Touch</span></a>
@@ -220,28 +220,28 @@
 		<div class="section">
 			<div class="container">
 				<div class="section-title text-center">
-					<h6 class="heading-uppercase">Testimonial</h6>
-					<h2>What People Say</h2>
+					<h6 class="heading-uppercase">about us</h6>
+					<h2>We are a family company.</h2>
 				</div>
 				<div class="testimonial-grid column-2">
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="./assets/images/testimonial-1.jpg" alt="">
+							<img src="./images/bebo.jpg" alt="">
 						</div>
 						<div class="testimonial-content">
-							<p class="margin-bottom-10 font-small">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-							<h5 class="font-weight-normal margin-0 line-height-140">Emiley Haley</h5>
-							<span class="font-small font-weight-normal">Manager - Mono</span>
+							<p class="margin-bottom-10 font-small">Luiseduardo hopes to follow in the footsteps of his father in becoming an accountant someday.</p>
+							<h5 class="font-weight-normal margin-0 line-height-140">Luiseduardo Perez</h5>
+							<span class="font-small font-weight-normal">Son</span>
 						</div>
 					</div>
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="./assets/images/testimonial-2.jpg" alt="">
+							<img src="./images/steph.jpg" alt="">
 						</div>
 						<div class="testimonial-content">
-							<p class="margin-bottom-10 font-small">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-							<h5 class="font-weight-normal margin-0 line-height-140">Andrew Palmer</h5>
-							<span class="font-small font-weight-normal">Developer - Mono</span>
+							<p class="margin-bottom-10 font-small">Stephanie has been working for our company since she was 16 years old!</p>
+							<h5 class="font-weight-normal margin-0 line-height-140">Stephanie Salem</h5>
+							<span class="font-small font-weight-normal">Daughter - Mono</span>
 						</div>
 					</div>
 					<div class="testimonial-grid-box">
@@ -327,9 +327,11 @@
 						<div class="col-12 col-md-6 col-lg-3">
 							<h6 class="heading-uppercase">Contact Info</h6>
 							<ul class="list-unstyled">
-								<li>121 King St, Melbourne VIC 3000</li>
-								<li>contact@example.com</li>
-								<li>+(123) 456 789 01</li>
+								<li>73-867 Fred Waring Dr.</li>
+								<li>Palm Desert, CA 92260</li>
+								<li>email:perfectbalance56@yahoo.com</li>
+								<li>Tel (760)773-4063</li>
+								<li>Fax (760)779-1921</li>
 							</ul>
 						</div>
 					</div><!-- end row(1) -->
@@ -342,7 +344,7 @@
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-right">
 							<ul class="list-horizontal-unstyled">
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="#"><i class="fab fa-yelp"></i></a></li>
 								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 								<li><a href="#"><i class="fab fa-pinterest"></i></a></li>
 								<li><a href="#"><i class="fab fa-instagram"></i></a></li>
