--- a/index.html
+++ b/index.html
@@ -28,10 +28,28 @@
 		<header>
 			<nav class="navbar navbar-dark">
 				<div class="container">
-					<a class="navbar-brand" style="margin-left: -7.5%;">
+					<a class="navbar-brand" href="../index.html">
 						<h5>L&L Perfect Balance Inc.</h5>
 					</a>
-				</div>
+					<ul class="nav">
+						<li class="nav-item">
+							<a class="nav-link" href="#about">About Us</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#services">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#useful-links">Useful Links</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact</a>
+						</li>
+					</ul><!-- end nav -->
+					<!-- Nav Toggle button -->
+					<button class="nav-toggle-btn">
+			      <span class="lines"></span>
+			    </button><!-- toggle button will show when screen resolution is less than 992px -->
+				</div><!-- end container -->
 			</nav>
 		</header>
 
@@ -89,7 +107,7 @@
 		<!-- end Home section -->
 		
 		<!-- Services section -->
-		<div class="section">
+		<div class="section" id="services">
 			<div class="container">
 				<div class="row icon-5xl text-center">
 					<div class="col-12 col-md-4">
@@ -129,74 +147,33 @@
 		</div>
 		<!-- end About section -->
 
-		<!-- Progress bars -->
-		<div class="section padding-top-0">
+		<!-- Useful Links -->
+		<div class="section padding-top-0" id="useful-links">
 			<div class="container">
+				<h4 style="margin-bottom: 2.5%;">Useful Links</h4>
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-							<h6 class="heading-uppercase">Consulting</h6>
-							<div class="progress">
-									<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-											<span>90%</span>
-									</div>
-							</div>
-					</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-								<h6 class="heading-uppercase">Social Marketing</h6>
-								<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-												<span>100%</span>
-										</div>
-								</div>
-						</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-									<h6 class="heading-uppercase">Management</h6>
-									<div class="progress">
-											<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-													<span>75%</span>
-											</div>
-									</div>
-							</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-								<h6 class="heading-uppercase">Branding</h6>
-								<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-												<span>95%</span>
-										</div>
-								</div>
-						</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-								<h6 class="heading-uppercase">Strategy & Planning</h6>
-								<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-												<span>85%</span>
-										</div>
-								</div>
-						</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="progress-box">
-								<h6 class="heading-uppercase">Digital Solutions</h6>
-								<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-												<span>90%</span>
-										</div>
-								</div>
-						</div>
+						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
 					</div>
-				</div><!-- end row -->
-			</div><!-- end container -->
+				</div>
+			</div>
 		</div>
-		<!-- end Progress bars -->
+		<!-- end Useful Links -->
 
 		<!-- Parallax section -->
 		<div class="section-xl bg-image parallax" style="background-image: url('./assets/images/onepage-minimal-bg.jpg')">
@@ -208,7 +185,7 @@
 							<p class="font-large"></p>
 						</div>
 						<div class="col-12 col-lg-4 col-xl-5 text-lg-right">
-							<a class="button button-xl button-radius button-reveal-right-outline-white" href="#"><i class="ti-arrow-right"></i><span>Get In Touch</span></a>
+							<a class="button button-xl button-radius button-reveal-right-outline-white" href="#contact"><i class="ti-arrow-right"></i><span>Get In Touch</span></a>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -217,13 +194,13 @@
 		<!-- end Parallax section -->
 
 		<!-- Testimonial section -->
-		<div class="section">
+		<div class="section" id="about">
 			<div class="container">
 				<div class="section-title text-center">
 					<h6 class="heading-uppercase">about us</h6>
 					<h2>We are a family company.</h2>
 				</div>
-				<div class="testimonial-grid column-2">
+				<div class="testimonial-grid column-1" style="align-items: center; justify-items: center;">
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
 							<img src="./images/bebo.jpg" alt="">
@@ -254,84 +231,45 @@
 							<span class="font-small font-weight-normal">Designer - Mono</span>
 						</div>
 					</div>
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="./assets/images/testimonial-4.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<p class="margin-bottom-10 font-small">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-							<h5 class="font-weight-normal margin-0 line-height-140">John Smith</h5>
-							<span class="font-small font-weight-normal">Marketer - Mono</span>
-						</div>
-					</div>
 				</div><!-- end testimonial-grid -->
 			</div><!-- end row -->
 		</div>
 		<!-- end Testimonial section -->
 
-		<!-- Clients section -->
-		<div class="section bg-grey">
-			<div class="container">
-				<div class="owl-carousel" data-owl-nav="true" data-owl-dots="false" data-owl-margin="30" data-owl-autoplay="true" data-owl-xs="1" data-owl-sm="2" data-owl-md="3" data-owl-lg="4" data-owl-xl="6">
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-1.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-2.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-3.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-4.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-5.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-6.png" alt=""></a>
-					</div>
-					<div class="client-box">
-						<a href="#"><img src="./assets/images/client-7.png" alt=""></a>
-					</div>
-				</div><!-- end owl-carousel -->
-			</div><!-- end container -->
-		</div>
-		<!-- end Clients section -->
-
 		<footer>
-			<div class="footer bg-dark">
+			<div class="footer bg-dark" id="contact">
 				<div class="container">
 					<div class="row col-spacing-40">
 						<div class="col-12 col-md-6 col-lg-3">
 							<h3>L&L Perfect Balance</h3>
+							<p>Contact us!</p>
 						</div>
 						<div class="col-12 col-md-6 col-lg-3">
-							<h6 class="heading-uppercase">Useful Links</h6>
+							<!-- <h6 class="heading-uppercase">Useful Links</h6>
 							<ul class="list-dash">
 								<li><a href="#">About us</a></li>
 								<li><a href="#">Team</a></li>
 								<li><a href="#">Prices</a></li>
 								<li><a href="#">Contact</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="col-12 col-md-6 col-lg-3">
-							<h6 class="heading-uppercase">Additional Links</h6>
+							<!-- <h6 class="heading-uppercase">Additional Links</h6>
 							<ul class="list-dash">
 								<li><a href="#">Services</a></li>
 								<li><a href="#">Process</a></li>
 								<li><a href="#">FAQ</a></li>
 								<li><a href="#">Careers</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="col-12 col-md-6 col-lg-3">
 							<h6 class="heading-uppercase">Contact Info</h6>
 							<ul class="list-unstyled">
-								<li>73-867 Fred Waring Dr.</li>
+								<li>73867 Fred Waring Dr.</li>
 								<li>Palm Desert, CA 92260</li>
-								<li>email:perfectbalance56@yahoo.com</li>
 								<li>Tel (760)773-4063</li>
 								<li>Fax (760)779-1921</li>
+								<li style="font-size: 0.9em;">Email: <a href="mailto:perfectbalance56@yahoo.com">perfectbalance56@yahoo.com</a></li>
 							</ul>
 						</div>
 					</div><!-- end row(1) -->
@@ -341,13 +279,12 @@
 					<div class="row">
 						<div class="col-12 col-md-6 text-center text-md-left">
 							<p>&copy; 2020 L&L Perfect Balance, All Rights Reserved.</p>
+							<p>Made with 🤍 by Norma Vazquez</p>
 						</div>
 						<div class="col-12 col-md-6 text-center text-md-right">
 							<ul class="list-horizontal-unstyled">
-								<li><a href="#"><i class="fab fa-yelp"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-								<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+								<br/>
+								<li><a href="https://www.yelp.com/biz/perfect-balance-palm-desert"><i class="fab fa-yelp"></i></a></li>
 							</ul>
 						</div>
 					</div><!-- end row(2) -->
