--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-12 col-lg-8 col-xl-7">
-							<h1 class="font-weight-light">Contact us!</h1>
+							<h1 class="font-weight-light">Schedule your appointment today!</h1>
 							<p class="font-large"></p>
 						</div>
 						<div class="col-12 col-lg-4 col-xl-5 text-lg-right">
