--- a/index.html
+++ b/index.html
@@ -153,30 +153,28 @@
 				<h4 style="margin-bottom: 2.5%;">Useful Links</h4>
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
+						<a class="button button-lg button-outline-dark-2" href="https://www1.oanda.com/currency/converter/">Currency Converter</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
+						<a class="button button-lg button-outline-dark-2" href="https://sa.www4.irs.gov/irfof/lang/en/irfofgetstatus.jsp">Federal Refund Status</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
+						<a class="button button-lg button-outline-dark-2" href="https://www.irs.gov/payments">IRS: Make a payment</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
+						<a class="button button-lg button-outline-dark-2" href="https://www.ftb.ca.gov/refund/index.asp">State Refund Status</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
+						<a class="button button-lg button-outline-dark-2" href="https://apps.irs.gov/app/picklist/list/formsPublications.html">Forms & Publications</a>
 					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<a class="button button-lg button-outline-dark-2" href="#">Outline Dark 2</a>
-					</div>
+					
 				</div>
 			</div>
 		</div>
 		<!-- end Useful Links -->
 
 		<!-- Parallax section -->
-		<div class="section-xl bg-image parallax" style="background-image: url('./assets/images/onepage-minimal-bg.jpg')">
+		<div class="section-xl bg-image parallax" style="background-image: url('./images/tree.jpg')">
 			<div class="bg-black-05">
 				<div class="container">
 					<div class="row align-items-center">
@@ -185,7 +183,7 @@
 							<p class="font-large"></p>
 						</div>
 						<div class="col-12 col-lg-4 col-xl-5 text-lg-right">
-							<a class="button button-xl button-radius button-reveal-right-outline-white" href="#contact"><i class="ti-arrow-right"></i><span>Get In Touch</span></a>
+							<a class="button button-xl button-radius button-reveal-right-outline-black" href="#contact"><i class="ti-arrow-right"></i><span>Get In Touch</span></a>
 						</div>
 					</div><!-- end row -->
 				</div><!-- end container -->
@@ -218,17 +216,10 @@
 						<div class="testimonial-content">
 							<p class="margin-bottom-10 font-small">Stephanie has been working for our company since she was 16 years old!</p>
 							<h5 class="font-weight-normal margin-0 line-height-140">Stephanie Salem</h5>
-							<span class="font-small font-weight-normal">Daughter - Mono</span>
+							<span class="font-small font-weight-normal">Daughter</span>
 						</div>
 					</div>
-					<div class="testimonial-grid-box">
-						<div class="testimonial-img">
-							<img src="./assets/images/testimonial-3.jpg" alt="">
-						</div>
-						<div class="testimonial-content">
-							<p class="margin-bottom-10 font-small">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-							<h5 class="font-weight-normal margin-0 line-height-140">Anna Mullen</h5>
-							<span class="font-small font-weight-normal">Designer - Mono</span>
+
 						</div>
 					</div>
 				</div><!-- end testimonial-grid -->
