--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
 				<div class="row icon-5xl text-center">
 					<div class="col-12 col-md-4">
 						<i class="fas fa-calculator"></i>
-						<h5 class="font-weight-normal margin-top-20">Personal & Sales Tax </h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<h5 class="font-weight-normal margin-top-20">Individual & Corporate Taxes </h5>
+						<p>We specialize in personal and corporate taxes, annual returns, tax solutions, and offer in compromise.</p>
 					</div>
 					<div class="col-12 col-md-4">
 						<i class="fas fa-book-open"></i>
 						<h5 class="font-weight-normal margin-top-20">Bookkeeping</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<p>We prepare monthly and annual Financial Statements, Profit & Loss, and Balance Sheets.</p>
 					</div>
 					<div class="col-12 col-md-4">
 						<i class="fas fa-dollar-sign"></i>
 						<h5 class="font-weight-normal margin-top-20">Payroll</h5>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+						<p>We have full payroll service, weekly, bi-weekly, semi-monthly, and monthly checks.</p>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -138,8 +138,8 @@
 						<img class="box-shadow" src="./images/luis1.jpg" alt="">
 					</div>
 					<div class="col-12 col-lg-6">
-						<h3 class="font-weight-light margin-bottom-20">Luis E. Perez</h3>
-						<p>Enrolled agent to practice before the I.R.S.</p>
+						<h3 class="font-weight-light margin-bottom-20">Luis E. Perez E.A.</h3>
+						<p>Enrolled agent to practice before the I.R.S. He became a C.P.A. at the University of Guadalajara, Mexico. Before Luis started his business in Palm Desert 35 years go, he worked for accounting firms in Indio and Orange County as well as an accounting firm in Guadalajara for 8 years. </p>
 						<!-- <span class="button button-lg button-radius button-reveal-right-dark margin-top-30" href="#"><i class="ti-arrow-right"></i><span>Learn More</span></a> -->
 					</div>
 				</div>
