Compressed images and zipped unused images.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<!-- Home section -->
 		<div class="owl-carousel owl-nav-overlay owl-dots-overlay" data-owl-nav="true" data-owl-dots="true" data-owl-items="1">
 			<!-- Slider box 1 -->
-			<div class="bg-image" style="background-image: url(./images/leo.jpg)">
+			<div class="bg-image" style="background-image: url(./images/leo1.jpg)">
 				<div class="section-xl bg-black-03">
 					<div class="container text-center">
 						<div class="row">
@@ -174,7 +174,7 @@
 		<!-- end Useful Links -->
 
 		<!-- Parallax section -->
-		<div class="section-xl bg-image parallax" style="background-image: url('./images/tree.jpg')">
+		<div class="section-xl bg-image parallax" style="background-image: url('./images/tree1.jpg')">
 			<div class="bg-black-05">
 				<div class="container">
 					<div class="row align-items-center">
@@ -201,7 +201,7 @@
 				<div class="testimonial-grid column-1" style="align-items: center; justify-items: center;">
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="./images/bebo.jpg" alt="">
+							<img src="./images/bebo1.jpg" alt="">
 						</div>
 						<div class="testimonial-content">
 							<p class="margin-bottom-10 font-small">Luiseduardo hopes to follow in the footsteps of his father in becoming an accountant someday.</p>
@@ -211,7 +211,7 @@
 					</div>
 					<div class="testimonial-grid-box">
 						<div class="testimonial-img">
-							<img src="./images/steph.jpg" alt="">
+							<img src="./images/steph1.jpg" alt="">
 						</div>
 						<div class="testimonial-content">
 							<p class="margin-bottom-10 font-small">Stephanie has been working for our company since she was 16 years old!</p>
