--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					</div>
 					<div class="col-12 col-lg-6">
 						<h3 class="font-weight-light margin-bottom-20">Luis E. Perez E.A.</h3>
-						<p>Enrolled agent to practice before the I.R.S. He became a C.P.A. at the University of Guadalajara, Mexico. Before Luis started his business in Palm Desert 35 years go, he worked for accounting firms in Indio and Orange County as well as an accounting firm in Guadalajara for 8 years. </p>
+						<p>Enrolled agent to practice before the I.R.S. He became a C.P.A. at the University of Guadalajara, Mexico. Before Luis started his business in Palm Desert 35 years ago, he worked for accounting firms in Indio and Orange County as well as an accounting firm in Guadalajara for 8 years. </p>
 						<!-- <span class="button button-lg button-radius button-reveal-right-dark margin-top-30" href="#"><i class="ti-arrow-right"></i><span>Learn More</span></a> -->
 					</div>
 				</div>
